# baton

./: .gitignore  .kin  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  baton.yaml  component_map.yaml  constraints.yaml  fly.toml  pact.yaml  primer_otlp.md  prompt.md  pyproject.toml  schema_hints.yaml  task.md  trust_policy.yaml
.constrain/sessions/: ea22dab7-a053-4c08-bb6a-8ed40b87e4c8.json
.github/workflows/: publish.yml
.kin/: code-map.json  config  index.json
.pact/: audit.jsonl  state.json
.pact/decomposition/: interview.json  tree.json
.pact/test-gen/: analysis.json  security_audit.md
configs/: README.md  reeve-egress.yaml  reeve-smoke.yaml
decomposition/: interview.json  tree.json
docs/: credential-custody-boundary.md  index.html
docs/ui/: index.html
src/baton/: __init__.py  adapter.py  adapter_control.py  arbiter.py  arbiter_exporter.py  audit_sidecar.py  canary.py  canary_test.py  certs.py  circuit.py  cli.py  collapse.py  compat.py  config.py  constrain.py  credential_custody.py  custodian.py  dashboard.py  dashboard_server.py  delegated_connector.py  delegated_runtime.py  dora.py  federation.py  ledger.py  lifecycle.py  manifest.py  mcp_server.py  migrate.py  mock.py  otel.py  process.py  schemas.py  service_log.py  signals.py  signet_delegated_authorization.py  state.py  taint.py  telemetry.py  tracing.py
templates/: grafana-baton.json
tests/: conftest.py  test_adapter.py  test_adapter_control.py  test_arbiter_integration.py  test_canary.py  test_certs.py  test_circuit.py  test_cli.py  test_collapse.py  test_compat.py  test_config.py  test_credential_custody.py  test_custodian.py  test_dashboard.py  test_dashboard_server.py  test_delegated_connector.py  test_delegated_runtime.py  test_dora.py  test_e2e.py  test_federation.py  test_gcp.py  test_image.py  test_ledger.py  test_lifecycle.py  test_manifest.py  test_mcp_server.py  test_migrate.py  test_mock.py  test_otel.py  test_otlp_default.py  test_process.py  test_protocols.py  test_providers.py  test_registry.py  test_routing.py  test_schemas.py  test_service_log.py  test_signals.py  test_signet_delegated_authorization.py  test_state.py  (+3 more)
tests/smoke/: test_baton_adapter.py  (+55 more)
(+161 files in other folders)
